--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -9,11 +9,11 @@
  <!--    <% category = ["Cleaning Service", "Catering Service", "Mobile and Laptop Repair", "Home Maintenance", "Movers", "Plumbing Service"] %> -->
 
     <div class="choose-service row">
-        <%= submit_tag "Catering", class: "jobimage chooseThis", style: "background:image-url('../assets/catering.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Cleaning", class: "jobimage", style: "background:image-url('../assets/cleaningservice.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Mover", class: "jobimage", style: "background:image-url('../assets/mover.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Plumbing", class: "jobimage", style: "background:image-url('../assets/plumbing.png'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Gadget Repair", class: "jobimage", style: "background:image-url('../assets/gadgetservice.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= submit_tag "Catering", class: "jobimage chooseThis cateringcss" %>
+        <%= submit_tag "Cleaning", class: "jobimage cleaningcss" %>
+        <%= submit_tag "Mover", class: "jobimage movercss" %>
+        <%= submit_tag "Plumbing", class: "jobimage plumbingcss" %>
+        <%= submit_tag "Gadget Repair", class: "jobimage gadgetcss" %>
     </div>
     
     <div class="service-container row">
