--- a/app/views/affiliates/show.html.erb
+++ b/app/views/affiliates/show.html.erb
@@ -6,12 +6,7 @@
 				<div><%= image_tag(@affiliate.affiliates_avatar,class:"userprofilepicture")%></div>
 				<div class="userprofileinfopart">
 					<h1><%= @affiliate.first_name.upcase %> <%= @affiliate.last_name.upcase %></h1>
-					<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
+					<h6>I am a hard working, honest individual. I am a good timekeeper, always willing to learn new skills. I am friendly, helpful and polite, have a good sense of humour. I am able to work independently in busy environments and also within a team setting. I am outgoing and tactful, and able to listen effectively when solving problems.</h6>
 				</div>
 			</div>
 		</div>
@@ -175,12 +170,7 @@
 			<div class="col-md-8">
 					<% @review.each do |t| %>
 					<div class="fixheightforreviewsection">
-						<p class="reviewsectioncomment">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p class="reviewsectioncomment">Crystal is a very resposible girl, who give an excellent service. She is very kind in such a way that i forgotted that I have requested for a job but she took initiative to make a call to remind me about that. Therefore, I would like to recommend my friend that this new web app is awesome and provided a very good services.</p>
 					</div>
 					<% end %>
 			</div>
